# Arqui_tpe_2

./: CMakeLists.txt  README.md
g25-64046-65531/g25-64046-65531/: prepare.sh  run.sh
g25-64046-65531/g25-64046-65531/Bootloader/Pure64/src/: sysvar.asm
g25-64046-65531/g25-64046-65531/Bootloader/Pure64/src/init/: isa.asm
g25-64046-65531/g25-64046-65531/Kernel/: Makefile
g25-64046-65531/g25-64046-65531/Kernel/asm/: handler.asm  interrupts.asm  registers.asm
g25-64046-65531/g25-64046-65531/Kernel/c/: exceptions.c  idtLoader.c  irqDispatcher.c  kernel.c  moduleLoader.c  sysCallsHandler.c  time.c
g25-64046-65531/g25-64046-65531/Kernel/c/drivers/: fonts.h  keyboardDriver.c  soundDriver.c  videoDriver.c
g25-64046-65531/g25-64046-65531/Kernel/include/: exceptions.h  idtLoader.h  interrupts.h  keyboardDriver.h  soundDriver.h  sysCallsHandler.h  time.h  videoDriver.h
g25-64046-65531/g25-64046-65531/Userland/SampleCodeModule/: Makefile
g25-64046-65531/g25-64046-65531/Userland/SampleCodeModule/asm/: standarlib.asm
g25-64046-65531/g25-64046-65531/Userland/SampleCodeModule/c/: console.c  pongis.c  pongislib.c  sampleCodeModule.c  standarlib.c
g25-64046-65531/g25-64046-65531/Userland/SampleCodeModule/include/: console.h  man.h  mario.h  pongis.h  pongislib.h  standarlib.h  victory.h
